@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
 
+2011-12-27  Michael Jahn
+	* better error handling for PDF export plugin
+
 2011-12-26  Piotr Ożarowski
 	* Restoring database from backup fixed
 
